# LLM-PROJECT-A5-Analysis-of-Linguistic-Stereotypes-in-Generative-AI

./: .gitignore  Different_prov  README.md  adjective_experiments.py  all_dialects_traslated.csv  call_apis.py  check_rephrasing.txt  descrizioni.md  list of adjectives.txt  main.py  manual_prompts.txt  manual_prompts_answers.jsonl  manual_prompts_answers_non_linguistic.jsonl  non_linguistic_bias.txt  project_5_automatic_responses.jsonl  promptStructure.md  prompts.txt  pyproject.toml  questions.txt  requirements.txt  role_prompting.py  tralate_to_languages.py
Siciliano/: README.md
analysis_adjective_by_adri/: Instruction_to_put_in_paper.md  df_heat_full.html  df_heat_models_aggettivo_language.html  n_classified_as_adjective.ods  results_role_prompting.jsonl  role_prompts.txt  to_show.ipynb  to_show_role_prompting.ipynb
analysis_job_assignation/: __init__.py  associate_jobs_baseline.py  associate_jobs_multiagent.py  descrizioni.txt  jobs.txt
paper/: acl_latex.tex  custom.bib  paper.tex
report/: acl_latex.aux  acl_latex.bbl  acl_latex.blg  acl_latex.fdb_latexmk  acl_latex.fls  acl_latex.out  acl_latex.tex  custom.bib
test_assegna_lavori_dai_character_sketch_by_Digre/: __init__.py  associate_jobs.py  associate_jobs_baseline.py  associate_jobs_multiagent.py  descrizioni.csv  descrizioni.md  descrizioni.txt  job_assignments_log.jsonl  job_assignments_log_baseline.json  job_assignments_log_baseline.jsonl  job_assignments_results.json  jobs.txt  summary_baseline.txt
test_character/: analysis.py
test_criminality/: analysis.py  prompt_criminality.csv  (+4 more)
(+131 files in other folders)
